# where to install our headers
#includedir=$(prefix)/include/libmesh

# omit from 'make TAGS'
TAGS:
tags:

# TODO: Automate maintenance of this list.
# for file in `find eigen/Eigen eigen/unsupported -type f | grep -v CMakeLists.txt` ; do echo "        $file \\" ; done
nobase_include_HEADERS = \
        eigen/Eigen/PardisoSupport \
        eigen/Eigen/QR \
        eigen/Eigen/KLUSupport \
        eigen/Eigen/src/PardisoSupport/PardisoSupport.h \
        eigen/Eigen/src/QR/HouseholderQR.h \
        eigen/Eigen/src/QR/FullPivHouseholderQR.h \
        eigen/Eigen/src/QR/ColPivHouseholderQR.h \
        eigen/Eigen/src/QR/HouseholderQR_LAPACKE.h \
        eigen/Eigen/src/QR/ColPivHouseholderQR_LAPACKE.h \
        eigen/Eigen/src/QR/CompleteOrthogonalDecomposition.h \
        eigen/Eigen/src/KLUSupport/KLUSupport.h \
        eigen/Eigen/src/UmfPackSupport/UmfPackSupport.h \
        eigen/Eigen/src/Cholesky/LLT_LAPACKE.h \
        eigen/Eigen/src/Cholesky/LDLT.h \
        eigen/Eigen/src/Cholesky/LLT.h \
        eigen/Eigen/src/LU/PartialPivLU.h \
        eigen/Eigen/src/LU/arch/InverseSize4.h \
        eigen/Eigen/src/LU/InverseImpl.h \
        eigen/Eigen/src/LU/FullPivLU.h \
        eigen/Eigen/src/LU/PartialPivLU_LAPACKE.h \
        eigen/Eigen/src/LU/Determinant.h \
        eigen/Eigen/src/SVD/UpperBidiagonalization.h \
        eigen/Eigen/src/SVD/JacobiSVD.h \
        eigen/Eigen/src/SVD/JacobiSVD_LAPACKE.h \
        eigen/Eigen/src/SVD/SVDBase.h \
        eigen/Eigen/src/SVD/BDCSVD.h \
        eigen/Eigen/src/PaStiXSupport/PaStiXSupport.h \
        eigen/Eigen/src/SparseQR/SparseQR.h \
        eigen/Eigen/src/SparseCore/SparseProduct.h \
        eigen/Eigen/src/SparseCore/ConservativeSparseSparseProduct.h \
        eigen/Eigen/src/SparseCore/CompressedStorage.h \
        eigen/Eigen/src/SparseCore/MappedSparseMatrix.h \
        eigen/Eigen/src/SparseCore/SparseMatrix.h \
        eigen/Eigen/src/SparseCore/SparseSparseProductWithPruning.h \
        eigen/Eigen/src/SparseCore/SparseCompressedBase.h \
        eigen/Eigen/src/SparseCore/AmbiVector.h \
        eigen/Eigen/src/SparseCore/SparseView.h \
        eigen/Eigen/src/SparseCore/SparseMatrixBase.h \
        eigen/Eigen/src/SparseCore/SparseVector.h \
        eigen/Eigen/src/SparseCore/SparsePermutation.h \
        eigen/Eigen/src/SparseCore/TriangularSolver.h \
        eigen/Eigen/src/SparseCore/SparseRef.h \
        eigen/Eigen/src/SparseCore/SparseAssign.h \
        eigen/Eigen/src/SparseCore/SparseDot.h \
        eigen/Eigen/src/SparseCore/SparseTranspose.h \
        eigen/Eigen/src/SparseCore/SparseSelfAdjointView.h \
        eigen/Eigen/src/SparseCore/SparseColEtree.h \
        eigen/Eigen/src/SparseCore/SparseDiagonalProduct.h \
        eigen/Eigen/src/SparseCore/SparseMap.h \
        eigen/Eigen/src/SparseCore/SparseCwiseBinaryOp.h \
        eigen/Eigen/src/SparseCore/SparseRedux.h \
        eigen/Eigen/src/SparseCore/SparseDenseProduct.h \
        eigen/Eigen/src/SparseCore/SparseUtil.h \
        eigen/Eigen/src/SparseCore/SparseCwiseUnaryOp.h \
        eigen/Eigen/src/SparseCore/SparseTriangularView.h \
        eigen/Eigen/src/SparseCore/SparseSolverBase.h \
        eigen/Eigen/src/SparseCore/SparseBlock.h \
        eigen/Eigen/src/SparseCore/SparseFuzzy.h \
        eigen/Eigen/src/OrderingMethods/Eigen_Colamd.h \
        eigen/Eigen/src/OrderingMethods/Ordering.h \
        eigen/Eigen/src/OrderingMethods/Amd.h \
        eigen/Eigen/src/Jacobi/Jacobi.h \
        eigen/Eigen/src/SparseCholesky/SimplicialCholesky.h \
        eigen/Eigen/src/SparseCholesky/SimplicialCholesky_impl.h \
        eigen/Eigen/src/MetisSupport/MetisSupport.h \
        eigen/Eigen/src/IterativeLinearSolvers/ConjugateGradient.h \
        eigen/Eigen/src/IterativeLinearSolvers/BasicPreconditioners.h \
        eigen/Eigen/src/IterativeLinearSolvers/BiCGSTAB.h \
        eigen/Eigen/src/IterativeLinearSolvers/LeastSquareConjugateGradient.h \
        eigen/Eigen/src/IterativeLinearSolvers/SolveWithGuess.h \
        eigen/Eigen/src/IterativeLinearSolvers/IncompleteCholesky.h \
        eigen/Eigen/src/IterativeLinearSolvers/IterativeSolverBase.h \
        eigen/Eigen/src/IterativeLinearSolvers/IncompleteLUT.h \
        eigen/Eigen/src/Eigenvalues/MatrixBaseEigenvalues.h \
        eigen/Eigen/src/Eigenvalues/ComplexSchur_LAPACKE.h \
        eigen/Eigen/src/Eigenvalues/GeneralizedSelfAdjointEigenSolver.h \
        eigen/Eigen/src/Eigenvalues/RealSchur_LAPACKE.h \
        eigen/Eigen/src/Eigenvalues/EigenSolver.h \
        eigen/Eigen/src/Eigenvalues/RealQZ.h \
        eigen/Eigen/src/Eigenvalues/RealSchur.h \
        eigen/Eigen/src/Eigenvalues/ComplexSchur.h \
        eigen/Eigen/src/Eigenvalues/ComplexEigenSolver.h \
        eigen/Eigen/src/Eigenvalues/SelfAdjointEigenSolver.h \
        eigen/Eigen/src/Eigenvalues/SelfAdjointEigenSolver_LAPACKE.h \
        eigen/Eigen/src/Eigenvalues/GeneralizedEigenSolver.h \
        eigen/Eigen/src/Eigenvalues/HessenbergDecomposition.h \
        eigen/Eigen/src/Eigenvalues/Tridiagonalization.h \
        eigen/Eigen/src/Householder/HouseholderSequence.h \
        eigen/Eigen/src/Householder/BlockHouseholder.h \
        eigen/Eigen/src/Householder/Householder.h \
        eigen/Eigen/src/misc/lapacke.h \
        eigen/Eigen/src/misc/blas.h \
        eigen/Eigen/src/misc/lapacke_mangling.h \
        eigen/Eigen/src/misc/RealSvd2x2.h \
        eigen/Eigen/src/misc/lapack.h \
        eigen/Eigen/src/misc/Kernel.h \
        eigen/Eigen/src/misc/Image.h \
        eigen/Eigen/src/Geometry/EulerAngles.h \
        eigen/Eigen/src/Geometry/Quaternion.h \
        eigen/Eigen/src/Geometry/Translation.h \
        eigen/Eigen/src/Geometry/AngleAxis.h \
        eigen/Eigen/src/Geometry/OrthoMethods.h \
        eigen/Eigen/src/Geometry/arch/Geometry_SIMD.h \
        eigen/Eigen/src/Geometry/RotationBase.h \
        eigen/Eigen/src/Geometry/Transform.h \
        eigen/Eigen/src/Geometry/Hyperplane.h \
        eigen/Eigen/src/Geometry/AlignedBox.h \
        eigen/Eigen/src/Geometry/Homogeneous.h \
        eigen/Eigen/src/Geometry/Scaling.h \
        eigen/Eigen/src/Geometry/Rotation2D.h \
        eigen/Eigen/src/Geometry/Umeyama.h \
        eigen/Eigen/src/Geometry/ParametrizedLine.h \
        eigen/Eigen/src/SparseLU/SparseLU_copy_to_ucol.h \
        eigen/Eigen/src/SparseLU/SparseLU_panel_dfs.h \
        eigen/Eigen/src/SparseLU/SparseLU_heap_relax_snode.h \
        eigen/Eigen/src/SparseLU/SparseLU_Memory.h \
        eigen/Eigen/src/SparseLU/SparseLU_column_bmod.h \
        eigen/Eigen/src/SparseLU/SparseLU_SupernodalMatrix.h \
        eigen/Eigen/src/SparseLU/SparseLUImpl.h \
        eigen/Eigen/src/SparseLU/SparseLU_Utils.h \
        eigen/Eigen/src/SparseLU/SparseLU_relax_snode.h \
        eigen/Eigen/src/SparseLU/SparseLU_gemm_kernel.h \
        eigen/Eigen/src/SparseLU/SparseLU_kernel_bmod.h \
        eigen/Eigen/src/SparseLU/SparseLU_column_dfs.h \
        eigen/Eigen/src/SparseLU/SparseLU_panel_bmod.h \
        eigen/Eigen/src/SparseLU/SparseLU_Structs.h \
        eigen/Eigen/src/SparseLU/SparseLU.h \
        eigen/Eigen/src/SparseLU/SparseLU_pruneL.h \
        eigen/Eigen/src/SparseLU/SparseLU_pivotL.h \
        eigen/Eigen/src/SuperLUSupport/SuperLUSupport.h \
        eigen/Eigen/src/CholmodSupport/CholmodSupport.h \
        eigen/Eigen/src/Core/CoreIterators.h \
        eigen/Eigen/src/Core/AssignEvaluator.h \
        eigen/Eigen/src/Core/Transpositions.h \
        eigen/Eigen/src/Core/ArrayWrapper.h \
        eigen/Eigen/src/Core/SelfAdjointView.h \
        eigen/Eigen/src/Core/ArithmeticSequence.h \
        eigen/Eigen/src/Core/Assign.h \
        eigen/Eigen/src/Core/products/SelfadjointProduct.h \
        eigen/Eigen/src/Core/products/GeneralMatrixMatrixTriangular_BLAS.h \
        eigen/Eigen/src/Core/products/TriangularMatrixMatrix.h \
        eigen/Eigen/src/Core/products/TriangularMatrixVector_BLAS.h \
        eigen/Eigen/src/Core/products/TriangularMatrixMatrix_BLAS.h \
        eigen/Eigen/src/Core/products/GeneralMatrixVector.h \
        eigen/Eigen/src/Core/products/SelfadjointMatrixVector_BLAS.h \
        eigen/Eigen/src/Core/products/TriangularSolverMatrix.h \
        eigen/Eigen/src/Core/products/GeneralMatrixMatrix.h \
        eigen/Eigen/src/Core/products/SelfadjointMatrixMatrix_BLAS.h \
        eigen/Eigen/src/Core/products/SelfadjointRank2Update.h \
        eigen/Eigen/src/Core/products/TriangularMatrixVector.h \
        eigen/Eigen/src/Core/products/GeneralMatrixMatrix_BLAS.h \
        eigen/Eigen/src/Core/products/SelfadjointMatrixMatrix.h \
        eigen/Eigen/src/Core/products/GeneralBlockPanelKernel.h \
        eigen/Eigen/src/Core/products/SelfadjointMatrixVector.h \
        eigen/Eigen/src/Core/products/GeneralMatrixMatrixTriangular.h \
        eigen/Eigen/src/Core/products/TriangularSolverMatrix_BLAS.h \
        eigen/Eigen/src/Core/products/GeneralMatrixVector_BLAS.h \
        eigen/Eigen/src/Core/products/TriangularSolverVector.h \
        eigen/Eigen/src/Core/products/Parallelizer.h \
        eigen/Eigen/src/Core/MapBase.h \
        eigen/Eigen/src/Core/arch/NEON/Complex.h \
        eigen/Eigen/src/Core/arch/NEON/PacketMath.h \
        eigen/Eigen/src/Core/arch/NEON/MathFunctions.h \
        eigen/Eigen/src/Core/arch/NEON/TypeCasting.h \
        eigen/Eigen/src/Core/arch/NEON/GeneralBlockPanelKernel.h \
        eigen/Eigen/src/Core/arch/AltiVec/Complex.h \
        eigen/Eigen/src/Core/arch/AltiVec/PacketMath.h \
        eigen/Eigen/src/Core/arch/AltiVec/MatrixProductCommon.h \
        eigen/Eigen/src/Core/arch/AltiVec/MatrixProduct.h \
        eigen/Eigen/src/Core/arch/AltiVec/MathFunctions.h \
        eigen/Eigen/src/Core/arch/AltiVec/MatrixProductMMA.h \
        eigen/Eigen/src/Core/arch/SSE/Complex.h \
        eigen/Eigen/src/Core/arch/SSE/PacketMath.h \
        eigen/Eigen/src/Core/arch/SSE/MathFunctions.h \
        eigen/Eigen/src/Core/arch/SSE/TypeCasting.h \
        eigen/Eigen/src/Core/arch/GPU/PacketMath.h \
        eigen/Eigen/src/Core/arch/GPU/MathFunctions.h \
        eigen/Eigen/src/Core/arch/GPU/TypeCasting.h \
        eigen/Eigen/src/Core/arch/ZVector/Complex.h \
        eigen/Eigen/src/Core/arch/ZVector/PacketMath.h \
        eigen/Eigen/src/Core/arch/ZVector/MathFunctions.h \
        eigen/Eigen/src/Core/arch/AVX512/Complex.h \
        eigen/Eigen/src/Core/arch/AVX512/PacketMath.h \
        eigen/Eigen/src/Core/arch/AVX512/MathFunctions.h \
        eigen/Eigen/src/Core/arch/AVX512/TypeCasting.h \
        eigen/Eigen/src/Core/arch/CUDA/Complex.h \
        eigen/Eigen/src/Core/arch/HIP/hcc/math_constants.h \
        eigen/Eigen/src/Core/arch/SYCL/PacketMath.h \
        eigen/Eigen/src/Core/arch/SYCL/MathFunctions.h \
        eigen/Eigen/src/Core/arch/SYCL/TypeCasting.h \
        eigen/Eigen/src/Core/arch/SYCL/SyclMemoryModel.h \
        eigen/Eigen/src/Core/arch/SYCL/InteropHeaders.h \
        eigen/Eigen/src/Core/arch/AVX/Complex.h \
        eigen/Eigen/src/Core/arch/AVX/PacketMath.h \
        eigen/Eigen/src/Core/arch/AVX/MathFunctions.h \
        eigen/Eigen/src/Core/arch/AVX/TypeCasting.h \
        eigen/Eigen/src/Core/arch/Default/Half.h \
        eigen/Eigen/src/Core/arch/Default/ConjHelper.h \
        eigen/Eigen/src/Core/arch/Default/BFloat16.h \
        eigen/Eigen/src/Core/arch/Default/GenericPacketMathFunctions.h \
        eigen/Eigen/src/Core/arch/Default/Settings.h \
        eigen/Eigen/src/Core/arch/Default/GenericPacketMathFunctionsFwd.h \
        eigen/Eigen/src/Core/arch/Default/TypeCasting.h \
        eigen/Eigen/src/Core/arch/MSA/Complex.h \
        eigen/Eigen/src/Core/arch/MSA/PacketMath.h \
        eigen/Eigen/src/Core/arch/MSA/MathFunctions.h \
        eigen/Eigen/src/Core/arch/SVE/PacketMath.h \
        eigen/Eigen/src/Core/arch/SVE/MathFunctions.h \
        eigen/Eigen/src/Core/arch/SVE/TypeCasting.h \
        eigen/Eigen/src/Core/SolverBase.h \
        eigen/Eigen/src/Core/Product.h \
        eigen/Eigen/src/Core/Redux.h \
        eigen/Eigen/src/Core/Reverse.h \
        eigen/Eigen/src/Core/functors/TernaryFunctors.h \
        eigen/Eigen/src/Core/functors/StlFunctors.h \
        eigen/Eigen/src/Core/functors/UnaryFunctors.h \
        eigen/Eigen/src/Core/functors/BinaryFunctors.h \
        eigen/Eigen/src/Core/functors/AssignmentFunctors.h \
        eigen/Eigen/src/Core/functors/NullaryFunctors.h \
        eigen/Eigen/src/Core/CwiseNullaryOp.h \
        eigen/Eigen/src/Core/VectorwiseOp.h \
        eigen/Eigen/src/Core/Reshaped.h \
        eigen/Eigen/src/Core/ReturnByValue.h \
        eigen/Eigen/src/Core/Swap.h \
        eigen/Eigen/src/Core/GenericPacketMath.h \
        eigen/Eigen/src/Core/IO.h \
        eigen/Eigen/src/Core/SelfCwiseBinaryOp.h \
        eigen/Eigen/src/Core/BandMatrix.h \
        eigen/Eigen/src/Core/TriangularMatrix.h \
        eigen/Eigen/src/Core/PlainObjectBase.h \
        eigen/Eigen/src/Core/Replicate.h \
        eigen/Eigen/src/Core/CwiseUnaryOp.h \
        eigen/Eigen/src/Core/CommaInitializer.h \
        eigen/Eigen/src/Core/CoreEvaluators.h \
        eigen/Eigen/src/Core/MathFunctions.h \
        eigen/Eigen/src/Core/NumTraits.h \
        eigen/Eigen/src/Core/SolveTriangular.h \
        eigen/Eigen/src/Core/ArrayBase.h \
        eigen/Eigen/src/Core/VectorBlock.h \
        eigen/Eigen/src/Core/EigenBase.h \
        eigen/Eigen/src/Core/MathFunctionsImpl.h \
        eigen/Eigen/src/Core/Dot.h \
        eigen/Eigen/src/Core/Random.h \
        eigen/Eigen/src/Core/IndexedView.h \
        eigen/Eigen/src/Core/util/Memory.h \
        eigen/Eigen/src/Core/util/Constants.h \
        eigen/Eigen/src/Core/util/Macros.h \
        eigen/Eigen/src/Core/util/ReshapedHelper.h \
        eigen/Eigen/src/Core/util/BlasUtil.h \
        eigen/Eigen/src/Core/util/XprHelper.h \
        eigen/Eigen/src/Core/util/ConfigureVectorization.h \
        eigen/Eigen/src/Core/util/IndexedViewHelper.h \
        eigen/Eigen/src/Core/util/SymbolicIndex.h \
        eigen/Eigen/src/Core/util/ForwardDeclarations.h \
        eigen/Eigen/src/Core/util/DisableStupidWarnings.h \
        eigen/Eigen/src/Core/util/Meta.h \
        eigen/Eigen/src/Core/util/IntegralConstant.h \
        eigen/Eigen/src/Core/util/NonMPL2.h \
        eigen/Eigen/src/Core/util/StaticAssert.h \
        eigen/Eigen/src/Core/util/MKL_support.h \
        eigen/Eigen/src/Core/util/ReenableStupidWarnings.h \
        eigen/Eigen/src/Core/NestByValue.h \
        eigen/Eigen/src/Core/ProductEvaluators.h \
        eigen/Eigen/src/Core/Diagonal.h \
        eigen/Eigen/src/Core/Map.h \
        eigen/Eigen/src/Core/Array.h \
        eigen/Eigen/src/Core/BooleanRedux.h \
        eigen/Eigen/src/Core/CwiseTernaryOp.h \
        eigen/Eigen/src/Core/NoAlias.h \
        eigen/Eigen/src/Core/MatrixBase.h \
        eigen/Eigen/src/Core/Inverse.h \
        eigen/Eigen/src/Core/PermutationMatrix.h \
        eigen/Eigen/src/Core/StlIterators.h \
        eigen/Eigen/src/Core/Solve.h \
        eigen/Eigen/src/Core/Ref.h \
        eigen/Eigen/src/Core/CwiseBinaryOp.h \
        eigen/Eigen/src/Core/DiagonalMatrix.h \
        eigen/Eigen/src/Core/ForceAlignedAccess.h \
        eigen/Eigen/src/Core/Visitor.h \
        eigen/Eigen/src/Core/Assign_MKL.h \
        eigen/Eigen/src/Core/Block.h \
        eigen/Eigen/src/Core/PartialReduxEvaluator.h \
        eigen/Eigen/src/Core/GeneralProduct.h \
        eigen/Eigen/src/Core/DenseCoeffsBase.h \
        eigen/Eigen/src/Core/Select.h \
        eigen/Eigen/src/Core/Stride.h \
        eigen/Eigen/src/Core/StableNorm.h \
        eigen/Eigen/src/Core/ConditionEstimator.h \
        eigen/Eigen/src/Core/Transpose.h \
        eigen/Eigen/src/Core/CwiseUnaryView.h \
        eigen/Eigen/src/Core/Fuzzy.h \
        eigen/Eigen/src/Core/DenseStorage.h \
        eigen/Eigen/src/Core/DiagonalProduct.h \
        eigen/Eigen/src/Core/DenseBase.h \
        eigen/Eigen/src/Core/GlobalFunctions.h \
        eigen/Eigen/src/Core/Matrix.h \
        eigen/Eigen/src/StlSupport/StdDeque.h \
        eigen/Eigen/src/StlSupport/StdVector.h \
        eigen/Eigen/src/StlSupport/StdList.h \
        eigen/Eigen/src/StlSupport/details.h \
        eigen/Eigen/src/plugins/ArrayCwiseBinaryOps.h \
        eigen/Eigen/src/plugins/BlockMethods.h \
        eigen/Eigen/src/plugins/MatrixCwiseUnaryOps.h \
        eigen/Eigen/src/plugins/ReshapedMethods.h \
        eigen/Eigen/src/plugins/ArrayCwiseUnaryOps.h \
        eigen/Eigen/src/plugins/IndexedViewMethods.h \
        eigen/Eigen/src/plugins/CommonCwiseUnaryOps.h \
        eigen/Eigen/src/plugins/MatrixCwiseBinaryOps.h \
        eigen/Eigen/src/plugins/CommonCwiseBinaryOps.h \
        eigen/Eigen/src/SPQRSupport/SuiteSparseQRSupport.h \
        eigen/Eigen/UmfPackSupport \
        eigen/Eigen/Cholesky \
        eigen/Eigen/Dense \
        eigen/Eigen/LU \
        eigen/Eigen/SVD \
        eigen/Eigen/StdList \
        eigen/Eigen/PaStiXSupport \
        eigen/Eigen/SparseQR \
        eigen/Eigen/StdDeque \
        eigen/Eigen/SparseCore \
        eigen/Eigen/OrderingMethods \
        eigen/Eigen/Jacobi \
        eigen/Eigen/SparseCholesky \
        eigen/Eigen/MetisSupport \
        eigen/Eigen/IterativeLinearSolvers \
        eigen/Eigen/Eigenvalues \
        eigen/Eigen/Householder \
        eigen/Eigen/Geometry \
        eigen/Eigen/StdVector \
        eigen/Eigen/SparseLU \
        eigen/Eigen/SuperLUSupport \
        eigen/Eigen/CholmodSupport \
        eigen/Eigen/Core \
        eigen/Eigen/Eigen \
        eigen/Eigen/SPQRSupport \
        eigen/Eigen/Sparse \
        eigen/Eigen/QtAlignedMalloc \
        eigen/unsupported/test/idrs.cpp \
        eigen/unsupported/test/cxx11_tensor_image_op_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_math_sycl.cpp \
        eigen/unsupported/test/forward_adolc.cpp \
        eigen/unsupported/test/cxx11_tensor_uint128.cpp \
        eigen/unsupported/test/matrix_square_root.cpp \
        eigen/unsupported/test/cxx11_non_blocking_thread_pool.cpp \
        eigen/unsupported/test/cxx11_tensor_thread_local.cpp \
        eigen/unsupported/test/matrix_functions.h \
        eigen/unsupported/test/BVH.cpp \
        eigen/unsupported/test/cxx11_tensor_ref.cpp \
        eigen/unsupported/test/polynomialsolver.cpp \
        eigen/unsupported/test/cxx11_tensor_patch.cpp \
        eigen/unsupported/test/cxx11_tensor_casts.cpp \
        eigen/unsupported/test/cxx11_tensor_scan.cpp \
        eigen/unsupported/test/cxx11_tensor_block_io.cpp \
        eigen/unsupported/test/cxx11_tensor_intdiv.cpp \
        eigen/unsupported/test/openglsupport.cpp \
        eigen/unsupported/test/special_packetmath.cpp \
        eigen/unsupported/test/cxx11_tensor_contract_gpu.cu \
        eigen/unsupported/test/cxx11_tensor_thread_pool.cpp \
        eigen/unsupported/test/cxx11_tensor_broadcast_sycl.cpp \
        eigen/unsupported/test/FFT.cpp \
        eigen/unsupported/test/cxx11_tensor_complex_gpu.cu \
        eigen/unsupported/test/bessel_functions.cpp \
        eigen/unsupported/test/cxx11_tensor_trace.cpp \
        eigen/unsupported/test/cxx11_meta.cpp \
        eigen/unsupported/test/cxx11_tensor_padding.cpp \
        eigen/unsupported/test/cxx11_tensor_reduction_gpu.cu \
        eigen/unsupported/test/cxx11_tensor_argmax.cpp \
        eigen/unsupported/test/cxx11_tensor_mixed_indices.cpp \
        eigen/unsupported/test/cxx11_tensor_convolution_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_concatenation_sycl.cpp \
        eigen/unsupported/test/matrix_power.cpp \
        eigen/unsupported/test/splines.cpp \
        eigen/unsupported/test/cxx11_tensor_broadcasting.cpp \
        eigen/unsupported/test/mpreal_support.cpp \
        eigen/unsupported/test/cxx11_tensor_layout_swap_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_empty.cpp \
        eigen/unsupported/test/cxx11_tensor_morphing_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_chipping_sycl.cpp \
        eigen/unsupported/test/sparse_extra.cpp \
        eigen/unsupported/test/cxx11_tensor_reverse.cpp \
        eigen/unsupported/test/cxx11_tensor_random_gpu.cu \
        eigen/unsupported/test/cxx11_tensor_shuffling.cpp \
        eigen/unsupported/test/cxx11_tensor_striding.cpp \
        eigen/unsupported/test/cxx11_tensor_argmax_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_patch_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_reduction.cpp \
        eigen/unsupported/test/cxx11_tensor_builtins_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_chipping.cpp \
        eigen/unsupported/test/cxx11_tensor_assign.cpp \
        eigen/unsupported/test/autodiff.cpp \
        eigen/unsupported/test/dgmres.cpp \
        eigen/unsupported/test/alignedvector3.cpp \
        eigen/unsupported/test/matrix_function.cpp \
        eigen/unsupported/test/cxx11_tensor_image_patch.cpp \
        eigen/unsupported/test/cxx11_tensor_complex_cwise_ops_gpu.cu \
        eigen/unsupported/test/cxx11_tensor_comparisons.cpp \
        eigen/unsupported/test/cxx11_tensor_random.cpp \
        eigen/unsupported/test/cxx11_tensor_scan_gpu.cu \
        eigen/unsupported/test/cxx11_tensor_lvalue.cpp \
        eigen/unsupported/test/cxx11_tensor_scan_sycl.cpp \
        eigen/unsupported/test/matrix_exponential.cpp \
        eigen/unsupported/test/cxx11_eventcount.cpp \
        eigen/unsupported/test/cxx11_tensor_io.cpp \
        eigen/unsupported/test/cxx11_tensor_roundings.cpp \
        eigen/unsupported/test/polynomialutils.cpp \
        eigen/unsupported/test/cxx11_tensor_forced_eval.cpp \
        eigen/unsupported/test/cxx11_tensor_convolution.cpp \
        eigen/unsupported/test/cxx11_tensor_move.cpp \
        eigen/unsupported/test/minres.cpp \
        eigen/unsupported/test/cxx11_tensor_of_complex.cpp \
        eigen/unsupported/test/gmres.cpp \
        eigen/unsupported/test/cxx11_tensor_of_const_values.cpp \
        eigen/unsupported/test/cxx11_tensor_of_strings.cpp \
        eigen/unsupported/test/cxx11_tensor_block_eval.cpp \
        eigen/unsupported/test/special_functions.cpp \
        eigen/unsupported/test/cxx11_tensor_custom_index.cpp \
        eigen/unsupported/test/cxx11_tensor_volume_patch.cpp \
        eigen/unsupported/test/cxx11_tensor_custom_op_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_block_access.cpp \
        eigen/unsupported/test/NumericalDiff.cpp \
        eigen/unsupported/test/cxx11_tensor_index_list.cpp \
        eigen/unsupported/test/cxx11_maxsizevector.cpp \
        eigen/unsupported/test/cxx11_tensor_fixed_size.cpp \
        eigen/unsupported/test/cxx11_tensor_simple.cpp \
        eigen/unsupported/test/cxx11_tensor_of_float16_gpu.cu \
        eigen/unsupported/test/cxx11_tensor_reverse_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_custom_op.cpp \
        eigen/unsupported/test/cxx11_tensor_math.cpp \
        eigen/unsupported/test/cxx11_tensor_ifft.cpp \
        eigen/unsupported/test/cxx11_tensor_cast_float16_gpu.cu \
        eigen/unsupported/test/cxx11_tensor_inflation_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_expr.cpp \
        eigen/unsupported/test/cxx11_tensor_generator_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_device_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_argmax_gpu.cu \
        eigen/unsupported/test/cxx11_tensor_device.cu \
        eigen/unsupported/test/cxx11_tensor_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_const.cpp \
        eigen/unsupported/test/cxx11_tensor_padding_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_executor.cpp \
        eigen/unsupported/test/kronecker_product.cpp \
        eigen/unsupported/test/NonLinearOptimization.cpp \
        eigen/unsupported/test/cxx11_tensor_contract_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_reduction_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_generator.cpp \
        eigen/unsupported/test/cxx11_tensor_shuffling_sycl.cpp \
        eigen/unsupported/test/levenberg_marquardt.cpp \
        eigen/unsupported/test/cxx11_tensor_layout_swap.cpp \
        eigen/unsupported/test/cxx11_tensor_morphing.cpp \
        eigen/unsupported/test/cxx11_tensor_image_patch_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_sugar.cpp \
        eigen/unsupported/test/cxx11_runqueue.cpp \
        eigen/unsupported/test/EulerAngles.cpp \
        eigen/unsupported/test/cxx11_tensor_symmetry.cpp \
        eigen/unsupported/test/cxx11_tensor_random_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_striding_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_volume_patch_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_forced_eval_sycl.cpp \
        eigen/unsupported/test/cxx11_tensor_map.cpp \
        eigen/unsupported/test/FFTW.cpp \
        eigen/unsupported/test/cxx11_tensor_gpu.cu \
        eigen/unsupported/test/cxx11_tensor_fft.cpp \
        eigen/unsupported/test/cxx11_tensor_concatenation.cpp \
        eigen/unsupported/test/cxx11_tensor_inflation.cpp \
        eigen/unsupported/test/cxx11_tensor_contraction.cpp \
        eigen/unsupported/test/cxx11_tensor_notification.cpp \
        eigen/unsupported/test/cxx11_tensor_dimension.cpp \
        eigen/unsupported/test/autodiff_scalar.cpp \
        eigen/unsupported/README.txt \
        eigen/unsupported/doc/examples/MatrixSquareRoot.cpp \
        eigen/unsupported/doc/examples/FFT.cpp \
        eigen/unsupported/doc/examples/PolynomialUtils1.cpp \
        eigen/unsupported/doc/examples/BVH_Example.cpp \
        eigen/unsupported/doc/examples/MatrixPower.cpp \
        eigen/unsupported/doc/examples/MatrixLogarithm.cpp \
        eigen/unsupported/doc/examples/MatrixPower_optimal.cpp \
        eigen/unsupported/doc/examples/MatrixExponential.cpp \
        eigen/unsupported/doc/examples/MatrixSinh.cpp \
        eigen/unsupported/doc/examples/MatrixSine.cpp \
        eigen/unsupported/doc/examples/PolynomialSolver1.cpp \
        eigen/unsupported/doc/examples/SYCL/CwiseMul.cpp \
        eigen/unsupported/doc/examples/EulerAngles.cpp \
        eigen/unsupported/doc/examples/MatrixFunction.cpp \
        eigen/unsupported/bench/bench_svd.cpp \
        eigen/unsupported/Eigen/src/Splines/Spline.h \
        eigen/unsupported/Eigen/src/Splines/SplineFitting.h \
        eigen/unsupported/Eigen/src/Splines/SplineFwd.h \
        eigen/unsupported/Eigen/src/LevenbergMarquardt/LMcovar.h \
        eigen/unsupported/Eigen/src/LevenbergMarquardt/CopyrightMINPACK.txt \
        eigen/unsupported/Eigen/src/LevenbergMarquardt/LMonestep.h \
        eigen/unsupported/Eigen/src/LevenbergMarquardt/LMqrsolv.h \
        eigen/unsupported/Eigen/src/LevenbergMarquardt/LMpar.h \
        eigen/unsupported/Eigen/src/LevenbergMarquardt/LevenbergMarquardt.h \
        eigen/unsupported/Eigen/src/Polynomials/Companion.h \
        eigen/unsupported/Eigen/src/Polynomials/PolynomialUtils.h \
        eigen/unsupported/Eigen/src/Polynomials/PolynomialSolver.h \
        eigen/unsupported/Eigen/src/MatrixFunctions/StemFunction.h \
        eigen/unsupported/Eigen/src/MatrixFunctions/MatrixFunction.h \
        eigen/unsupported/Eigen/src/MatrixFunctions/MatrixPower.h \
        eigen/unsupported/Eigen/src/MatrixFunctions/MatrixExponential.h \
        eigen/unsupported/Eigen/src/MatrixFunctions/MatrixSquareRoot.h \
        eigen/unsupported/Eigen/src/MatrixFunctions/MatrixLogarithm.h \
        eigen/unsupported/Eigen/src/NumericalDiff/NumericalDiff.h \
        eigen/unsupported/Eigen/src/IterativeSolvers/IncompleteLU.h \
        eigen/unsupported/Eigen/src/IterativeSolvers/MINRES.h \
        eigen/unsupported/Eigen/src/IterativeSolvers/Scaling.h \
        eigen/unsupported/Eigen/src/IterativeSolvers/IDRS.h \
        eigen/unsupported/Eigen/src/IterativeSolvers/DGMRES.h \
        eigen/unsupported/Eigen/src/IterativeSolvers/IterationController.h \
        eigen/unsupported/Eigen/src/IterativeSolvers/GMRES.h \
        eigen/unsupported/Eigen/src/IterativeSolvers/ConstrainedConjGrad.h \
        eigen/unsupported/Eigen/src/MoreVectorization/MathFunctions.h \
        eigen/unsupported/Eigen/src/Eigenvalues/ArpackSelfAdjointEigenSolver.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/BesselFunctionsPacketMath.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/SpecialFunctionsHalf.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/arch/NEON/SpecialFunctions.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/arch/NEON/BesselFunctions.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/arch/GPU/SpecialFunctions.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/arch/AVX512/SpecialFunctions.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/arch/AVX512/BesselFunctions.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/arch/AVX/SpecialFunctions.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/arch/AVX/BesselFunctions.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/HipVectorCompatibility.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/SpecialFunctionsBFloat16.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/BesselFunctionsHalf.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/BesselFunctionsFunctors.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/BesselFunctionsImpl.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/BesselFunctionsBFloat16.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/SpecialFunctionsFunctors.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/SpecialFunctionsPacketMath.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/SpecialFunctionsImpl.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/SpecialFunctionsArrayAPI.h \
        eigen/unsupported/Eigen/src/SpecialFunctions/BesselFunctionsArrayAPI.h \
        eigen/unsupported/Eigen/src/SparseExtra/MarketIO.h \
        eigen/unsupported/Eigen/src/SparseExtra/DynamicSparseMatrix.h \
        eigen/unsupported/Eigen/src/SparseExtra/MatrixMarketIterator.h \
        eigen/unsupported/Eigen/src/SparseExtra/BlockOfDynamicSparseMatrix.h \
        eigen/unsupported/Eigen/src/SparseExtra/BlockSparseMatrix.h \
        eigen/unsupported/Eigen/src/SparseExtra/RandomSetter.h \
        eigen/unsupported/Eigen/src/NonLinearOptimization/dogleg.h \
        eigen/unsupported/Eigen/src/NonLinearOptimization/chkder.h \
        eigen/unsupported/Eigen/src/NonLinearOptimization/qrsolv.h \
        eigen/unsupported/Eigen/src/NonLinearOptimization/r1updt.h \
        eigen/unsupported/Eigen/src/NonLinearOptimization/covar.h \
        eigen/unsupported/Eigen/src/NonLinearOptimization/rwupdt.h \
        eigen/unsupported/Eigen/src/NonLinearOptimization/fdjac1.h \
        eigen/unsupported/Eigen/src/NonLinearOptimization/HybridNonLinearSolver.h \
        eigen/unsupported/Eigen/src/NonLinearOptimization/lmpar.h \
        eigen/unsupported/Eigen/src/NonLinearOptimization/LevenbergMarquardt.h \
        eigen/unsupported/Eigen/src/NonLinearOptimization/r1mpyq.h \
        eigen/unsupported/Eigen/src/KroneckerProduct/KroneckerTensorProduct.h \
        eigen/unsupported/Eigen/src/Skyline/SkylineStorage.h \
        eigen/unsupported/Eigen/src/Skyline/SkylineMatrixBase.h \
        eigen/unsupported/Eigen/src/Skyline/SkylineInplaceLU.h \
        eigen/unsupported/Eigen/src/Skyline/SkylineMatrix.h \
        eigen/unsupported/Eigen/src/Skyline/SkylineUtil.h \
        eigen/unsupported/Eigen/src/Skyline/SkylineProduct.h \
        eigen/unsupported/Eigen/src/AutoDiff/AutoDiffVector.h \
        eigen/unsupported/Eigen/src/AutoDiff/AutoDiffScalar.h \
        eigen/unsupported/Eigen/src/AutoDiff/AutoDiffJacobian.h \
        eigen/unsupported/Eigen/src/FFT/ei_kissfft_impl.h \
        eigen/unsupported/Eigen/src/FFT/ei_fftw_impl.h \
        eigen/unsupported/Eigen/src/EulerAngles/EulerAngles.h \
        eigen/unsupported/Eigen/src/EulerAngles/EulerSystem.h \
        eigen/unsupported/Eigen/src/BVH/BVAlgorithms.h \
        eigen/unsupported/Eigen/src/BVH/KdBVH.h \
        eigen/unsupported/Eigen/Splines \
        eigen/unsupported/Eigen/LevenbergMarquardt \
        eigen/unsupported/Eigen/Polynomials \
        eigen/unsupported/Eigen/MatrixFunctions \
        eigen/unsupported/Eigen/NumericalDiff \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorFixedSize.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorInitializer.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorRef.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorEvaluator.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorImagePatch.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorDeviceGpu.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorReduction.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorConvolutionSycl.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorShuffling.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorGlobalFunctions.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorReverse.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorBase.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorDeviceCuda.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorScan.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorGenerator.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorContractionSycl.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorTraits.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/Tensor.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorBroadcasting.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorLayoutSwap.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorInflation.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorRandom.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorContractionBlocking.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorContraction.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorForcedEval.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorPatch.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorScanSycl.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorFFT.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorIntDiv.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorCustomOp.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorConcatenation.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorStriding.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorIndexList.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorArgMax.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorAssign.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorReductionGpu.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorContractionCuda.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorMacros.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorMap.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorUInt128.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorIO.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorGpuHipCudaUndefines.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorCostModel.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorMeta.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorFunctors.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/README.md \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorExpr.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorContractionGpu.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorVolumePatch.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorDeviceThreadPool.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorConversion.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorDeviceDefault.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorForwardDeclarations.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorGpuHipCudaDefines.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorReductionCuda.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorEvalTo.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorReductionSycl.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorChipping.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorDimensionList.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorTrace.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorDeviceSycl.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorContractionThreadPool.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorBlock.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorContractionMapper.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorStorage.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorDevice.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorDimensions.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorExecutor.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorMorphing.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorPadding.h \
        eigen/unsupported/Eigen/CXX11/src/Tensor/TensorConvolution.h \
        eigen/unsupported/Eigen/CXX11/src/ThreadPool/ThreadCancel.h \
        eigen/unsupported/Eigen/CXX11/src/ThreadPool/Barrier.h \
        eigen/unsupported/Eigen/CXX11/src/ThreadPool/ThreadLocal.h \
        eigen/unsupported/Eigen/CXX11/src/ThreadPool/RunQueue.h \
        eigen/unsupported/Eigen/CXX11/src/ThreadPool/EventCount.h \
        eigen/unsupported/Eigen/CXX11/src/ThreadPool/ThreadYield.h \
        eigen/unsupported/Eigen/CXX11/src/ThreadPool/NonBlockingThreadPool.h \
        eigen/unsupported/Eigen/CXX11/src/ThreadPool/ThreadPoolInterface.h \
        eigen/unsupported/Eigen/CXX11/src/ThreadPool/ThreadEnvironment.h \
        eigen/unsupported/Eigen/CXX11/src/util/MaxSizeVector.h \
        eigen/unsupported/Eigen/CXX11/src/util/CXX11Meta.h \
        eigen/unsupported/Eigen/CXX11/src/util/CXX11Workarounds.h \
        eigen/unsupported/Eigen/CXX11/src/util/EmulateArray.h \
        eigen/unsupported/Eigen/CXX11/src/TensorSymmetry/DynamicSymmetry.h \
        eigen/unsupported/Eigen/CXX11/src/TensorSymmetry/StaticSymmetry.h \
        eigen/unsupported/Eigen/CXX11/src/TensorSymmetry/Symmetry.h \
        eigen/unsupported/Eigen/CXX11/src/TensorSymmetry/util/TemplateGroupTheory.h \
        eigen/unsupported/Eigen/CXX11/Tensor \
        eigen/unsupported/Eigen/CXX11/ThreadPool \
        eigen/unsupported/Eigen/CXX11/TensorSymmetry \
        eigen/unsupported/Eigen/IterativeSolvers \
        eigen/unsupported/Eigen/MoreVectorization \
        eigen/unsupported/Eigen/AlignedVector3 \
        eigen/unsupported/Eigen/SpecialFunctions \
        eigen/unsupported/Eigen/SparseExtra \
        eigen/unsupported/Eigen/ArpackSupport \
        eigen/unsupported/Eigen/AdolcForward \
        eigen/unsupported/Eigen/NonLinearOptimization \
        eigen/unsupported/Eigen/OpenGLSupport \
        eigen/unsupported/Eigen/KroneckerProduct \
        eigen/unsupported/Eigen/Skyline \
        eigen/unsupported/Eigen/AutoDiff \
        eigen/unsupported/Eigen/FFT \
        eigen/unsupported/Eigen/EulerAngles \
        eigen/unsupported/Eigen/MPRealSupport \
        eigen/unsupported/Eigen/BVH

EXTRA_DIST = \
        eigen/COPYING.BSD \
        eigen/COPYING.GPL \
        eigen/COPYING.LGPL \
        eigen/COPYING.MINPACK \
        eigen/COPYING.MPL2 \
        eigen/COPYING.README
